--- a/mydemo/pom.xml
+++ b/mydemo/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.wwwarehouse</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>mydemo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -14,6 +14,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+
         <!--Redis -->
         <dependency>
             <groupId>redis.clients</groupId>
@@ -56,6 +62,11 @@
             <version>3.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.1.6.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
