删掉一些文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 # 以'#'开始的行，被视为注释.                                                                                                                          
-# 忽略掉所有文件名是 foo.txt的文件.
 mydemo/.idea/
 mydemo/target/
+mydemo/mydemo.iml
