--- a/mydemo/pom.xml
+++ b/mydemo/pom.xml
@@ -83,6 +83,12 @@
             <artifactId>spring-context</artifactId>
             <version>4.1.6.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.eweb4j</groupId>
+            <artifactId>fel</artifactId>
+            <version>0.8</version>
+        </dependency>
     </dependencies>
 
     <build>
