--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# 以'#'开始的行，被视为注释.                                                                                                                          
+﻿# 以'#'开始的行，被视为注释.                                                                .idea/                                                          
 mydemo/.idea/
 mydemo/target/
 mydemo/mydemo.iml
