--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>mydemo2/mydemo2</module>
+        <module>mydemo1</module>
+        <module>mydemo2</module>
     </modules>
 
     <properties>
